[tool.poetry]
name = "repl_python3_selenium-YouTube-scraper-live1"
version = "0.1.0"
description = ""
authors = ["Haris-AhmedAhme <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
selenium = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
